Bug 40700 - [4.5 Regression] All amd64 libffi execution tests fail on Solaris 10/x86
Summary: [4.5 Regression] All amd64 libffi execution tests fail on Solaris 10/x86
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: libffi (show other bugs)
Version: 4.5.0
: P4 normal
Target Milestone: 4.5.0
Assignee: Rainer Orth
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-09 18:10 UTC by Rainer Orth
Modified: 2009-12-10 10:18 UTC (History)
1 user (show)

See Also:
Host: i386-pc-solaris2.10
Target: i386-pc-solaris2.10
Build: i386-pc-solaris2.10
Known to work:
Known to fail:
Last reconfirmed: 2009-12-10 01:34:52


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Orth 2009-07-09 18:10:30 UTC
Between 20090612 and 20090622, all amd64 libffi execution tests started to fail.
Running them under gdb didn't reveal much, unfortunately, just that the programs
die with SIGSEGV.
Comment 1 Joseph S. Myers 2009-07-29 22:54:19 UTC
Solaris x86 is not a primary or secondary target so setting to P4.
Comment 2 Rainer Orth 2009-12-10 01:34:52 UTC
Mine.
Comment 3 Rainer Orth 2009-12-10 01:45:17 UTC
Patch here: http://gcc.gnu.org/ml/gcc-patches/2009-12/msg00517.html
Comment 4 Rainer Orth 2009-12-10 10:09:41 UTC
Subject: Bug 40700

Author: ro
Date: Thu Dec 10 10:09:17 2009
New Revision: 155124

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=155124
Log:
	PR libffi/40700
	* src/closures.c [X86_64 && __sun__ && __svr4__]
	(FFI_MMAP_EXEC_WRIT): Define.

Modified:
    trunk/libffi/ChangeLog
    trunk/libffi/src/closures.c

Comment 5 Rainer Orth 2009-12-10 10:18:43 UTC
Fixed for 4.5.0.