re PR libffi/40700 (All amd64 libffi execution tests fail on Solaris 10/x86)

PR libffi/40700
	* src/closures.c [X86_64 && __sun__ && __svr4__]
	(FFI_MMAP_EXEC_WRIT): Define.

From-SVN: r155124